<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="title_activity_search">Google Search Image</string>
    <string name="search_hint">Enter Search Term</string>
    <string name="search">Search</string>
    <string name="title_activity_activity_image_display">Image Display</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    
    <string name="color_filter_title">Color Filter</string>
    <string name="image_type_title">Image Type</string>
    <string name="image_size_title">Image Size</string>
    <string name="site_filter_title">Web Filter</string>
    <string name="save_button_text">Save</string>
    <string name="Settings_title">Advanced Search Options</string>
    <string name="share_image">Share Content</string>

</resources>
